# sz-service

./: CMakeLists.txt  README.md  动物棋-战斗底层设计案.docx  动物棋-预案战斗中可出现的技能.xlsx
3rd/BehaviorTree.CPP/install/lib/cmake/behaviortree_cpp/: behaviortree_cppConfig.cmake  behaviortree_cppTargets-debug.cmake  behaviortree_cppTargets.cmake
3rd/install/msvc/lib/pkgconfig/: hiredis.pc
3rd/install/msvc/share/hiredis/: hiredis-targets-debug.cmake  hiredis-targets.cmake
cmake/: 3rd.behaviorTree.cpp.cmake  3rd.cinatra.cmake  3rd.hiredis.cmake  3rd.json.cmake  3rd.redis++.cmake  3rd.spdlog.cmake  3rd.toml++.cmake  build.cmake  develop.cmake  find.hiredis.cmake
cmake_module/: Findhiredis.cmake
configs/: animals.toml
configs/bt/: exec_animal_dead.xml  exec_animal_each.xml  exec_animal_top.xml  exec_attack_bill_each.xml  logic_main.xml  nodes.xml  one_animal_by_property.xml  root.xml
configs/bt/actions/: change_property.xml
configs/bt/animals/: rat.xml
configs/bt/groot2/: root.btproj
game-service/: CMakeLists.txt  animal.cpp  animal.h  battle.cpp  battle.h  calendar.h  cfg_animals.h  defines.h  main.cpp  non-lock.h  player.cpp  player.h  property.h  room.h  snowflake.h  test_helper.h
game-service/bt/: bt-define.h  bt-format.cpp  bt-helper.cpp  bt-helper.h  enum_register.cpp
game-service/bt/bt-node/actions/: build_battle_bill.cpp  change_animal_property.cpp  clear_last_target.cpp  current_ts.cpp  debug_say.cpp  exchange_mode.cpp  get_animal_list.cpp  get_animal_property.cpp  get_animal_type.cpp  get_attr.cpp  get_lowest_property_animal.cpp  get_player_master.cpp  get_player_slaver.cpp  get_stage.cpp  inc_attr.cpp  init.data.cpp  init.data.h  init_owner_data.cpp  last_recovery_ts.cpp  next_stage.cpp  queue_back.cpp  queue_clear.cpp  queue_front.cpp  queue_pop_back.cpp  queue_pop_front.cpp  queue_push_back.cpp  queue_push_front.cpp  queue_random_one.cpp  queue_size.cpp  remove_dead_animal.cpp  resolve_battle_bill.cpp  revise_attr.cpp  set_blackboard.cpp  set_last_recovery_ts.cpp  set_stage.cpp
game-service/bt/bt-node/conditions/: compare_attr.cpp  compare_numeric.cpp  is_target_attack_able.cpp  is_target_faraway.cpp  queue_empty.cpp  random_probability.cpp
game-service/bt/bt-node/controls/: switch_enum.cpp
game-service/bt/bt-node/decorators/: queue_foreach.cpp  queue_foreach_copied.cpp  run_once.cpp
game-service/cmake/: files.cmake
util/: CMakeLists.txt  alloc.h  counter.h  crontab.h  datetime.h  encoding.h  endianness.h  handle_pool.h  logger.h  non-lock.h  nostd_source_location.h  random_helper.h  redis_helper.h  singleton.h  string_utils.h  timer_wheel.h  uuid.snowflake.h
util/cmake/: files.cmake
